Code refactoring and unit testing.

--- a/Szperacz.Wpf/Properties/Resources.pl-PL.resx
+++ b/Szperacz.Wpf/Properties/Resources.pl-PL.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AlertPleaseWait" xml:space="preserve">
+    <value>Proszę czekać...</value>
+  </data>
   <data name="AppName" xml:space="preserve">
     <value>Szperacz</value>
   </data>
