--- a/Szperacz.Wpf/Properties/Resources.resx
+++ b/Szperacz.Wpf/Properties/Resources.resx
@@ -156,4 +156,7 @@
   <data name="WatermarkPhrase" xml:space="preserve">
     <value>Searched phrase</value>
   </data>
+  <data name="Welcome" xml:space="preserve">
+    <value>Welcome!</value>
+  </data>
 </root>
